<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.dualcom.xai_support.ListActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:background="@color/main_color"
        android:gravity="center_vertical|fill_vertical"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:text="@string/app_name"
                android:id="@+id/Labelincorrect" />

            <TextView
                android:text="Неотвеченных обращений: 0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inbox"
                android:textColor="@color/white" />

        </LinearLayout>

        <RelativeLayout
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-50dp"
            android:padding="10dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/refresh"
                android:background="@drawable/btn_panel" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView22"
                android:background="@drawable/list"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/nointernet"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/about"
            android:background="@drawable/nointernte" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ni_text"
            android:id="@+id/ni_text"
            android:textColor="@color/main_color" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/ListMessage"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:divider="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/load_list"
            android:background="@color/extra_color"
            android:gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/white"
                android:id="@+id/progressBar2" />

            <TextView
                android:text="@string/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
