<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="end"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:weightSum="1"
            android:background="@color/main_color"
            android:gravity="center_vertical|fill_vertical"
            android:id="@+id/linearLayout2">

            <RelativeLayout
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/GO_BACK"
                    android:background="@drawable/btn_panel" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView22"
                    android:background="@drawable/back"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginRight="40dp"
                android:visibility="gone" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/button2"
                    android:background="@drawable/btn_panel" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView23"
                    android:background="@drawable/vk"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:visibility="gone" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/button3"
                    android:background="@drawable/btn_panel" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView24"
                    android:background="@drawable/incorrect"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Labelincorrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incorrect_title"
                    android:textColor="#FFF"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/serial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Serial User"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/nointernet"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/about"
                android:background="@drawable/nointernte" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ni_text"
                android:id="@+id/ni_text"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/nointernet2"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/about2"
                android:background="@drawable/work_in_progress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Ведутся работы над этим разделом"
                android:id="@+id/ni_text2"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/incorrect_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="60dp"
                android:gravity="center_horizontal"
                android:text="@string/incoorect_not_found"
                android:textColor="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/incorrect_not_found"
                android:layout_alignParentTop="false"
                android:orientation="horizontal"
                android:paddingTop="50dp">

                <ListView
                    android:id="@+id/list_incorrect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@android:color/transparent"
                    android:foregroundGravity="bottom"
                    android:paddingBottom="40dp"
                    android:scrollIndicators="bottom"
                    android:stackFromBottom="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginRight="-10dp"
                android:layout_marginTop="-10dp"
                android:background="@drawable/incorrect_shadow"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/incorrect_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
                    android:paddingLeft="5dp"
                    android:textColor="#000"
                    android:textColorLink="@color/main_color" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-5dp"
                    android:layout_weight="1"
                    android:text="@string/send" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/manifest_toggle"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="-200dp"
                android:background="#2980b9"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="15dp">

                <ScrollView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="17dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/manifest_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Текст манифеста"
                        android:textColor="@color/white" />
                </ScrollView>

                <TextView
                    android:id="@+id/manifest_label"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Состояние манифеста"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>